--- a/zagar_server/pom.xml
+++ b/zagar_server/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-java8</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
         <!-- http://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
