--- a/zagar_server/pom.xml
+++ b/zagar_server/pom.xml
@@ -31,6 +31,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
             <version>9.3.7.v20160115</version>
