Fix reading from file

--- a/zagar_server/src/main/resources/testconfiguration.ini
+++ b/zagar_server/src/main/resources/testconfiguration.ini
@@ -3,7 +3,7 @@ clientConnectionPort=7000
 
 matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
-replicator=replication.JsonReplicator
+replicator=replication.TestJsonReplicator
 idGenerator=utils.SequentialIDGenerator
 
 services=matchMaker,clientConnections,replicator,idGenerator
