Start work at issue #17

--- a/zagar_server/src/test/resources/test_replication_leaderboard_config.ini
+++ b/zagar_server/src/test/resources/test_replication_leaderboard_config.ini
@@ -3,7 +3,7 @@ clientConnectionPort=7000
 
 matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
-replicator=replication.json.TestJsonReplicator
+replicator=replication.leaderboard.TestLeaderBoardReplicator
 idGenerator=utils.SequentialIDGenerator
 
 services=matchMaker,clientConnections,replicator,idGenerator
