--- a/zagar_client/pom.xml
+++ b/zagar_client/pom.xml
@@ -57,6 +57,13 @@
         </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>atom</groupId>
             <artifactId>zagar-protocol</artifactId>
             <version>1.0</version>
