--- a/zagar_server/src/main/resources/configuration.ini
+++ b/zagar_server/src/main/resources/configuration.ini
@@ -4,6 +4,7 @@ clientConnectionPort=7000
 matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
 replicator=replication.FullStateReplicator
+leaderBoarder=replication.LeaderBoardSender
 idGenerator=utils.SequentialIDGenerator
 
-services=matchMaker,clientConnections,replicator,idGenerator
+services=matchMaker,clientConnections,replicator,idGenerator,leaderBoarder
