Replication tests fixed

--- a/zagar_server/src/test/resources/test_replication_config.ini
+++ b/zagar_server/src/test/resources/test_replication_config.ini
@@ -4,6 +4,7 @@ clientConnectionPort=7000
 matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
 replicator=replication.json.TestJsonReplicator
+leaderBoarder=replication.json.EmptyLeaderBoarder
 idGenerator=utils.SequentialIDGenerator
 
-services=matchMaker,clientConnections,replicator,idGenerator
+services=matchMaker,clientConnections,replicator,leaderBoarder,idGenerator
