--- a/zagar_server/src/test/resources/test_replication_leaderboard_config.ini
+++ b/zagar_server/src/test/resources/test_replication_leaderboard_config.ini
@@ -3,7 +3,8 @@ clientConnectionPort=7000
 
 matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
-replicator=replication.leaderboard.TestLeaderBoardReplicator
+replicator=replication.leaderboard.EmptyReplicator
+leaderBoarder=replication.leaderboard.TestLeaderBoardReplicator
 idGenerator=utils.SequentialIDGenerator
 
-services=matchMaker,clientConnections,replicator,idGenerator
+services=matchMaker,clientConnections,leaderBoarder,replicator,idGenerator
