Some code style fixes

--- a/zagar_server/src/main/resources/configuration.ini
+++ b/zagar_server/src/main/resources/configuration.ini
@@ -5,6 +5,5 @@ matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
 replicator=replication.FullStateReplicator
 leaderBoarder=replication.LeaderBoardSender
-idGenerator=utils.SequentialIDGenerator
 
-services=matchMaker,clientConnections,replicator,idGenerator,leaderBoarder
+services=matchMaker,clientConnections,replicator,leaderBoarder
