Added temporal state replicator instead of full state one

--- a/zagar_server/src/main/resources/configuration.ini
+++ b/zagar_server/src/main/resources/configuration.ini
@@ -3,7 +3,7 @@ clientConnectionPort=7000
 
 matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
-replicator=replication.FullStateReplicator
+replicator=replication.TemporalStateReplicator
 leaderBoarder=replication.LeaderBoardSender
 
 services=matchMaker,clientConnections,replicator,leaderBoarder
