--- a/zagar_server/src/test/resources/test_replication_config.ini
+++ b/zagar_server/src/test/resources/test_replication_config.ini
@@ -5,6 +5,6 @@ matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
 replicator=replication.json.TestJsonReplicator
 leaderBoarder=replication.json.EmptyLeaderBoarder
-idGenerator=utils.SequentialIDGenerator
+idGenerator=utils.generators.SequentialIDGenerator
 
 services=matchMaker,clientConnections,replicator,leaderBoarder,idGenerator
