--- a/zagar_server/src/test/resources/test_replication_leaderboard_config.ini
+++ b/zagar_server/src/test/resources/test_replication_leaderboard_config.ini
@@ -5,6 +5,6 @@ matchMaker=matchmaker.MatchMakerImpl
 clientConnections=network.ClientConnections
 replicator=replication.leaderboard.EmptyReplicator
 leaderBoarder=replication.leaderboard.TestLeaderBoardReplicator
-idGenerator=utils.SequentialIDGenerator
+idGenerator=utils.generators.SequentialIDGenerator
 
 services=matchMaker,clientConnections,leaderBoarder,replicator,idGenerator
